# audit-mpc-lib

./: SECURITY_AUDIT_REPORT_src_common_crypto.md
.claude/commands/whitehat/: 01_spec.md  03a_poc_unit.md  03b_poc_integration.md  04_report.md
security-agent/: .gitignore  README.md  WHITEHAT_02_AUDITMAP.json
security-agent-master/.claude/commands/whitehat/: 02_auditmap.md
security-agent-master/prompts/attacker/: 02_SPEC.md  03_CODE_INSPECTOR.md  03b_MUTATION_TESTS.md  03c_EXPLOIT_SCHENARIO.md  04_ATTACK_SCENARIOS.md  05_REVIEW.md  06_POC.md
security-agent-master/prompts/whitehat/: 03b_POC_INTEGRATION.md
security-agent/.claude/commands/whitehat/: 02b_review.md
security-agent/prompts/attacker/: 07_REPORT.md
security-agent/prompts/whitehat/: 01_SPEC.md  01b_AUIDTMAP_ORDER.md  02_AUDITMAP.md  02b_AUDITMAP_REVIEW.md  03a_POC_UNIT.md  03b_POC_INTEGRATION.md  04_REPORT.md
src/common/cosigner/: asymmetric_eddsa_cosigner.cpp  asymmetric_eddsa_cosigner_server.cpp  cmp_ecdsa_online_signing_service.cpp  cmp_ecdsa_signing_service.cpp  cmp_offline_refresh_service.cpp  cmp_setup_service.cpp  eddsa_online_signing_service.cpp  mta.cpp
src/common/crypto/GFp_curve_algebra/: GFp_curve_algebra.c
src/common/crypto/commitments/: commitments.c  ring_pedersen.c
src/common/crypto/drng/: drng.c
src/common/crypto/ed25519_algebra/: curve25519.c  ed25519_algebra.c
src/common/crypto/keccak1600/: keccak1600.c
src/common/crypto/paillier/: paillier.c  paillier_zkp.c
src/common/crypto/shamir_secret_sharing/: verifiable_secret_sharing.c
src/common/crypto/zero_knowledge_proof/: range_proofs.c  schnorr.c
test/: CMakeLists.txt
test/cosigner/: CMakeLists.txt  poc_derivation_key_delta.cpp  poc_derivation_key_delta_integration.cpp  test_derivation_key_delta_fix.cpp
test/crypto/: keccak1600_init.cpp
test/crypto/ed25519_algebra/: CMakeLists.txt  poc_ED25519_public_from_private.cpp  poc_ED25519_public_from_private_integration.cpp
test/crypto/keccak1600/: CMakeLists.txt  poc_keccak1600_init.cpp
